Correçao dos testes